completed event creation